solve alignment

--- a/styles/components/ethos.scss
+++ b/styles/components/ethos.scss
@@ -11,9 +11,13 @@
   margin-top: 0em;
 }
 
+.j {
+  text-align: justify;
+}
+
 @media screen and (max-width: 991px) {
   .u._1 {
-    width: 12vw;
+    width: 60px;
   }
   .u._3 {
     width: 72vw;
